--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "NODE_ENV=test BLUEBIRD_DEBUG=1 DEBUG=nock.* mocha --watch",
     "test-ci": "NODE_ENV=test BLUEBIRD_DEBUG=1 DEBUG=nock.* mocha",
-    "test-debug": "NODE_ENV=test BLUEBIRD_DEBUG=1 DEBUG=nock.* node-debug --hidden=node_modules --no-preload _mocha --opts test/mocha.opts --watch"
+    "test-debug": "NODE_ENV=test BLUEBIRD_DEBUG=1 DEBUG=nock.* node-debug --hidden=node_modules --no-preload _mocha --opts test/mocha.opts --watch",
+    "postinstall": "coffee ./lib/deprecation.coffee"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/cypress-io/cypress-cli",
   "dependencies": {
+    "asciify": "^1.3.5",
     "bluebird": "3.3.4",
     "chalk": "^1.1.0",
     "coffee-script": "^1.9.3",
