--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "home-or-tmp": "^2.0.0",
     "human-interval": "^0.1.5",
     "lodash": "^3.10.0",
-    "progress": "^1.1.8",
+    "progress": "bahmutov/node-progress",
     "request": "^2.60.0",
     "request-progress": "^0.3.1",
     "through2": "^2.0.0",
